@@ -221,7 +221,7 @@
   <Dversion>2.043</Dversion>
   <ignoreUnsupportedPragmas>0</ignoreUnsupportedPragmas>
   <otherDMD>0</otherDMD>
-  <program>$(DMDInstallDir)windows\bin\dmd.exe</program>
+  <program>m:\s\d\rainers\windows\bin\dmd.exe</program>
   <imppath />
   <fileImppath>.</fileImppath>
   <outdir>..\bin\$(ConfigurationName)</outdir>
